# advent2022

./: Day1.ipynb  Day2.ipynb  Day3.ipynb  Day4.ipynb  Day5.ipynb  pyproject.toml
