[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = ""
authors = ["Augustin Prolongeau <augustin.prolongeau@backmarket.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
